<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_welcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- HEADER IMAGE -->
        <ImageView
            android:id="@+id/ivHeader"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/home"
            android:contentDescription="@string/desc_header_image" />

        <!-- CONTENT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <!-- Divider -->
            <View
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:background="@color/divider"
                android:layout_marginBottom="8dp" />

            <!-- Welcome -->
            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title"
                android:textSize="24sp"
                android:textColor="@color/text_title"
                android:fontFamily="@font/poppins_bold" />

            <!-- Title -->
            <TextView
                android:id="@+id/tvLoremIpsumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_heading"
                android:textSize="20sp"
                android:textColor="@color/text_title"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="24dp"
                android:letterSpacing="0.05" />

            <!-- Subtitle -->
            <TextView
                android:id="@+id/tvLoremIpsumSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_desc"
                android:textSize="14sp"
                android:textColor="@color/text_subtitle"
                android:fontFamily="@font/inter_18pt_regular"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="40dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>