<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- GAMBAR ATAS -->
        <ImageView
            android:id="@+id/bgTop"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- LOGO -->
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/desc_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- TEXT -->
        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textSize="14sp"
            android:textColor="#777"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- USERNAME -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_username"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="#EDEDED"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="#888"
            app:layout_constraintTop_toBottomOf="@id/tvSub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- PASSWORD -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="#888"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="#EDEDED"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@id/usernameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- FORGOT -->
        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="13sp"
            android:textColor="#777"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- BUTTON -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="220dp"
            android:layout_height="55dp"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            app:cornerRadius="12dp"
            android:background="@drawable/bg_button"
            app:backgroundTint="@null"
            app:layout_constraintTop_toBottomOf="@id/tvForgot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>